kladd3/pfcon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfcon
  labels:
    app: pfcon
    env: production
spec:
  type: NodePort
  selector:
    app: pfcon
    env: production
  ports:
    - port: 5009
      targetPort: 5009
      nodePort: 30009
