kladd3/pman-route.yaml
apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: 'true'
    name: pman
  spec:
    port:
      targetPort: 5010-tcp
    to:
      kind: Service
      name: pman
      weight: 100
